
[package]
edition = "2024"
name = "spi_master"
version = "0.1.0"
license = "MIT or Apache-2.0"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "1"
defmt-rtt = "1"

# add dependencies
rp2040-boot2 = "0.3"
portable-atomic = { version = "1.11", features = ["critical-section"] }
panic-halt = "0.2"
rp2040-monotonic = "1.3"
systick-monotonic = "1"

# add dependencies
[dependencies.rtic]
path = "C:/Develop/Rust/rtic-master/rtic-master/rtic"
version = "2.0.0"
features = ["thumbv6-backend"]

# add dependencies
[dependencies.rtic-monotonics]
path = "C:/Develop/Rust/rtic-master/rtic-master/rtic-monotonics"
version = "2.0.0"
features = ["rp2040", "cortex-m-systick"]

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }
